crates/sdk/tests/macros/invalid_args.stderr
error[E0277]: (calimero)> no method named `#[app::init]` found for type `MyType`
 --> tests/macros/invalid_args.rs:4:8
  |
4 | struct MyType;
  |        ^^^^^^ add an `#[app::init]` method to this type
  |
  = help: the trait `AppStateInit` is not implemented for `MyType`
note: required by a bound in `AppState`
 --> src/state.rs
  |
  | pub trait AppState: BorshSerialize + BorshDeserialize + AppStateInit {
  |                                                         ^^^^^^^^^^^^ required by this bound in `AppState`

warning: unused variable: `value`
  --> tests/macros/invalid_args.rs:10:26
   |
10 |     pub fn method(&self, value: impl MyTrait) {}
   |                          ^^^^^ help: if this is intentional, prefix it with an underscore: `_value`
   |
   = note: `#[warn(unused_variables)]` on by default
